--- a/core/templates/clientes/cliente_borrar.html
+++ b/core/templates/clientes/cliente_borrar.html
@@ -53,7 +53,7 @@
                             </div>
                     </form>
                         <div>
-                            <a href="{% url 'pago_detalles' pago.id %}" class="btn btn-secondary">Cancel</a>
+                            <a href="{% url 'cliente_detalles' cliente.id %}" class="btn btn-secondary">Cancel</a>
                         </div>
                     </div>
                 </div>
