nav login button remove

--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -57,12 +57,8 @@
                     </form>
                 </li>
             </ul>
-            {% else %}
-            <ul class="logout-container">
-                <li><a class="custon-login" onclick="location.href="{% url 'login' %}">Iniciar Sesión</a></li>
-            </ul>
                 {% endif %}
-        </nav>=
+        </nav>
     </header>
 
     <main>     
